Change the title of the generated document

--- a/html/header.html
+++ b/html/header.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Kiril Vladimirov Vladimirov</title>
+        <title>Voucher Codes</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
